--- a/Botoo/Base.lproj/Main.storyboard
+++ b/Botoo/Base.lproj/Main.storyboard
@@ -560,6 +560,14 @@
                                                     <action selector="selectEmoticon:" destination="iws-kV-VAm" eventType="touchDown" id="aaj-DR-baE"/>
                                                 </connections>
                                             </button>
+                                            <button opaque="NO" tag="102" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="5mI-E9-CiV">
+                                                <rect key="frame" x="115" y="10" width="50" height="50"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <state key="normal" image="(idle).png"/>
+                                                <connections>
+                                                    <action selector="selectEmoticon:" destination="iws-kV-VAm" eventType="touchDown" id="bfh-wh-S6i"/>
+                                                </connections>
+                                            </button>
                                         </subviews>
                                         <color key="backgroundColor" red="0.98823529409999999" green="0.89411764709999997" blue="0.92549019610000005" alpha="1" colorSpace="calibratedRGB"/>
                                     </view>
@@ -593,6 +601,7 @@
                         <outlet property="chatInputTextField" destination="xCq-d3-mWn" id="3un-7a-Ylu"/>
                         <outlet property="drawerContainer" destination="J3h-k7-gJ4" id="MKg-PE-Srq"/>
                         <outlet property="emo_baby" destination="glw-Tc-VSr" id="xFI-CE-Cq2"/>
+                        <outlet property="emo_idle" destination="5mI-E9-CiV" id="GEN-To-CKt"/>
                         <outlet property="emo_moon" destination="qfR-pv-P3h" id="FRP-tm-OIC"/>
                         <outlet property="emoticonView" destination="UkL-Tn-e3y" id="ifA-NE-uQs"/>
                         <outlet property="messageTableView" destination="G8Y-0M-6SP" id="puW-uA-FLz"/>
@@ -1849,6 +1858,7 @@
     </scenes>
     <resources>
         <image name="(baby).png" width="24" height="24"/>
+        <image name="(idle).png" width="100" height="100"/>
         <image name="(moon).png" width="24" height="24"/>
         <image name="chatBGdefault.png" width="750" height="1334"/>
         <image name="dolphin_only.png" width="120" height="120"/>
