--- a/Botoo/Base.lproj/Main.storyboard
+++ b/Botoo/Base.lproj/Main.storyboard
@@ -544,28 +544,20 @@
                                         <rect key="frame" x="0.0" y="10" width="375" height="216"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <subviews>
-                                            <button opaque="NO" tag="100" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="glw-Tc-VSr">
-                                                <rect key="frame" x="21" y="23" width="24" height="24"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                <state key="normal" image="(baby).png"/>
-                                                <connections>
-                                                    <action selector="selectEmoticon:" destination="iws-kV-VAm" eventType="touchDown" id="dH1-te-rYF"/>
-                                                </connections>
-                                            </button>
-                                            <button opaque="NO" tag="101" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="qfR-pv-P3h">
-                                                <rect key="frame" x="72" y="23" width="24" height="24"/>
-                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                <state key="normal" image="(moon).png"/>
-                                                <connections>
-                                                    <action selector="selectEmoticon:" destination="iws-kV-VAm" eventType="touchDown" id="aaj-DR-baE"/>
-                                                </connections>
-                                            </button>
-                                            <button opaque="NO" tag="102" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="5mI-E9-CiV">
-                                                <rect key="frame" x="115" y="10" width="50" height="50"/>
+                                            <button opaque="NO" tag="100" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="5mI-E9-CiV">
+                                                <rect key="frame" x="23" y="20" width="35" height="35"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <state key="normal" image="(idle).png"/>
                                                 <connections>
                                                     <action selector="selectEmoticon:" destination="iws-kV-VAm" eventType="touchDown" id="bfh-wh-S6i"/>
+                                                </connections>
+                                            </button>
+                                            <button opaque="NO" tag="101" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="3oC-bZ-Ng8">
+                                                <rect key="frame" x="74" y="20" width="35" height="35"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <state key="normal" image="(idle_fe).png"/>
+                                                <connections>
+                                                    <action selector="selectEmoticon:" destination="iws-kV-VAm" eventType="touchDown" id="CSH-5o-PIs"/>
                                                 </connections>
                                             </button>
                                         </subviews>
@@ -600,9 +592,8 @@
                     <connections>
                         <outlet property="chatInputTextField" destination="xCq-d3-mWn" id="3un-7a-Ylu"/>
                         <outlet property="drawerContainer" destination="J3h-k7-gJ4" id="MKg-PE-Srq"/>
-                        <outlet property="emo_baby" destination="glw-Tc-VSr" id="xFI-CE-Cq2"/>
                         <outlet property="emo_idle" destination="5mI-E9-CiV" id="GEN-To-CKt"/>
-                        <outlet property="emo_moon" destination="qfR-pv-P3h" id="FRP-tm-OIC"/>
+                        <outlet property="emo_idle_fe" destination="3oC-bZ-Ng8" id="Jcw-mB-Xse"/>
                         <outlet property="emoticonView" destination="UkL-Tn-e3y" id="ifA-NE-uQs"/>
                         <outlet property="messageTableView" destination="G8Y-0M-6SP" id="puW-uA-FLz"/>
                         <outlet property="plusView" destination="yI5-H9-ytG" id="7nZ-nc-juN"/>
@@ -1857,9 +1848,8 @@
         </scene>
     </scenes>
     <resources>
-        <image name="(baby).png" width="24" height="24"/>
         <image name="(idle).png" width="100" height="100"/>
-        <image name="(moon).png" width="24" height="24"/>
+        <image name="(idle_fe).png" width="100" height="100"/>
         <image name="chatBGdefault.png" width="750" height="1334"/>
         <image name="dolphin_only.png" width="120" height="120"/>
         <image name="homeBG.png" width="750" height="1334"/>
