--- a/UIChatContactCellL.xib
+++ b/UIChatContactCellL.xib
@@ -12,7 +12,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="90"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="j3v-bh-FXI" id="SyK-kX-v7h">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="89"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="89.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oed-9V-zT2">
@@ -26,10 +26,8 @@
                         <constraints>
                             <constraint firstAttribute="width" constant="57" id="2aT-Ph-pwI"/>
                         </constraints>
+                        <color key="tintColor" red="0.84705882349999995" green="0.1058823529" blue="0.37647058820000001" alpha="1" colorSpace="calibratedRGB"/>
                         <state key="normal" title="Contact"/>
-                        <connections>
-                            <action selector="contactButtonTapped:" destination="j3v-bh-FXI" eventType="touchUpInside" id="brl-IU-Agy"/>
-                        </connections>
                     </button>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="default_no_person" translatesAutoresizingMaskIntoConstraints="NO" id="tJO-EY-gQh">
                         <rect key="frame" x="76" y="44" width="30" height="30"/>
